criação do documento header para ser chamado nas outras páginas

--- a/pages/header.html
+++ b/pages/header.html
@@ -7,7 +7,7 @@
         <div class="links">
             <a href="sobre.php" >SOBRE</a>-
             <a href="importacao.php" >IMPORTAÇÃO</a>-
-            <a href="tabelas.php" >TABELAS</a>-
+            <a href="resgistro_transicoes.php" >REGISTROS</a>-
             <a href="documentacao.php" >DOCUMENTAÇÃO</a>
         </div>
     </nav>
