--- a/pages/head.html
+++ b/pages/head.html
@@ -8,5 +8,5 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../lib/css/styles.css">
 </head>
