remoção de link de página nao utilizados

--- a/pages/header.html
+++ b/pages/header.html
@@ -5,10 +5,8 @@
             <p><a href="../index.php" >DESAFIODEV</a></p>
         </div>
         <div class="links">
-            <a href="sobre.php" >SOBRE</a>-
             <a href="importacao.php" >IMPORTAÇÃO</a>-
-            <a href="resgistro_transicoes.php" >REGISTROS</a>-
-            <a href="documentacao.php" >DOCUMENTAÇÃO</a>
+            <a href="resgistro_transicoes.php" >REGISTROS</a>
         </div>
     </nav>
 </section>
